# malacyte

./: Cargo.toml  README.md
.github/: dependabot.yml
src/: main.rs
src/commands/: hello.rs  info.rs  mod.rs
