[package]
name = "e14_slash_commands"
version = "0.1.0"
authors = ["my name <my@email.address>"]
edition = "2018"

[dependencies]
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
