[package]
name = "malacyte"
version = "0.1.0"
authors = ["Xanthus <xanthus@protonmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Xanthus58/malacyte"
readme = "README.md"
description = "A discord bot built with the serentiy framework on rust. "
publish = false

[dependencies]
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[profile.release]
# See info here https://www.youtube.com/watch?v=b2qe3L4BX-Y
strip = true
opt-level = "s"
lto = true
codegen-units = 1